[package]
name = "irancell_ref"
version = "0.1.0"
edition = "2021"

[dependencies]
# کتابخانه اصلی برای درخواست‌های با هویت جعلی (TLS Fingerprint)
rquest = { version = "0.22", features = ["socks5", "cookies"] }

# سایر کتابخانه‌ها
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = "0.9.2"
chrono = "0.4"
indicatif = "0.17"
