[package]
name = "irancell-referral"
version = "2.0.0"
edition = "2021"
description = "Irancell Referral - Portable EXE"
authors = ["Developer"]

[profile.release]
opt-level = 'z'  # کوچکترین حجم
lto = true       # بهینه‌سازی لینک
codegen-units = 1
panic = 'abort'  # حجم کمتر
strip = true     # حذف سمبل‌ها

[dependencies]
anyhow = "1.0"
chrono = "0.4"
rand = "0.9.2"
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
