[package]
name = "irancell_pro_invite"
version = "8.1.0"
edition = "2021"

[dependencies] 
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "zstd", "socks", "rustls-tls", "cookies", "http2"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.2"
anyhow = "1.0"
